[package]
name = "run-hidden-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
shared_child = "1.1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }
